javaDSL/src/test/resources/typeSystemTestModels/invalid/expressions/SubtypingRelation.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.expressions;

public class SubtypingRelation {

  
}
